Made the main class